--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dash_ag_grid",
-    "version": "1.3.1",
+    "version": "2.0.0",
     "description": "Dash wrapper around ag-grid",
     "repository": {
         "type": "git",
@@ -24,19 +24,19 @@
     "author": "Plotly <chris@plot.ly>",
     "license": "Commercial",
     "dependencies": {
-        "@ag-grid-community/all-modules": "^27.2.1",
-        "@ag-grid-community/core": "^27.2.1",
-        "@ag-grid-community/react": "~27.2.1",
-        "@ag-grid-enterprise/all-modules": "^27.2.1",
-        "@ag-grid-enterprise/core": "^27.2.1",
         "@material-ui/core": "^4.11.4",
         "@material-ui/icons": "^4.11.2",
+        "ag-grid-community": ">=29.0.0",
+        "ag-grid-enterprise": ">=29.0.0",
+        "ag-grid-react": ">=29.0.0",
+        "dash": "^3.23.0",
         "esprima": "^4.0.1",
         "is-subset": "^0.1.1",
         "lodash.isequal": "^4.5.0",
         "ramda": "^0.26.1",
-        "react-markdown": "^6.0.2",
+        "react-markdown": "^8.0.4",
         "rehype-raw": "^5.1.0",
+        "remark-gfm": "^3.0.1",
         "static-eval": "^2.1.0"
     },
     "devDependencies": {
@@ -61,7 +61,7 @@
         "react-dom": "^16.8.6",
         "style-loader": "^0.23.1",
         "styled-jsx": "^3.2.1",
-        "webpack": "4.36.1",
+        "webpack": "^4.36.1",
         "webpack-cli": "3.3.6",
         "webpack-serve": "3.1.0"
     },
