--- a/package.json
+++ b/package.json
@@ -16,15 +16,20 @@
         "prepublishOnly": "npm run validate-init",
         "build:js": "webpack --mode production",
         "build:backends": "dash-generate-components ./src/lib/components dash_ag_grid -p package-info.json --r-prefix '' --jl-prefix ''",
-        "build:backends-activated": "(. venv/bin/activate || venv\\scripts\\activate && npm run build:py_and_r)",
         "build": "npm run build:js && npm run build:backends",
-        "build:activated": "npm run build:js && npm run build:backends-activated"
+        "postbuild": "es-check es2015 dash_ag_grid/*.js",
+        "private::format.eslint": "eslint --quiet --fix src",
+        "private::format.prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+        "format": "run-s private::format.*",
+        "private::lint.eslint": "eslint src",
+        "private::lint.prettier": "prettier \"src/**/*.{js,jsx,ts,tsx}\" --list-different",
+        "lint": "run-s private::lint.*"
     },
     "author": "Plotly <chris@plot.ly>",
     "license": "MIT",
     "dependencies": {
         "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.2",
+        "@material-ui/icons": "^4.11.3",
         "ag-grid-community": ">=29.0.0",
         "ag-grid-enterprise": ">=29.0.0",
         "ag-grid-react": ">=29.0.0",
@@ -32,41 +37,40 @@
         "d3-array": "^3.2.2",
         "d3-time": "^3.1.0",
         "d3-time-format": "^4.1.0",
-        "dash": "^3.23.0",
+        "dash": "^3.23.2",
         "esprima": "^4.0.1",
         "is-subset": "^0.1.1",
         "lodash.isequal": "^4.5.0",
-        "ramda": "^0.26.1",
-        "react-markdown": "^8.0.4",
-        "rehype-raw": "^5.1.0",
+        "ramda": "^0.28.0",
+        "react-markdown": "^8.0.5",
+        "rehype-raw": "^6.1.1",
         "remark-gfm": "^3.0.1",
         "static-eval": "^2.1.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.5",
+        "@babel/core": "^7.20.12",
+        "@babel/eslint-parser": "^7.19.1",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/preset-env": "^7.20.2",
         "@babel/preset-react": "^7.18.6",
         "@plotly/webpack-dash-dynamic-import": "^1.3.0",
-        "babel-eslint": "^10.0.2",
-        "babel-loader": "^8.0.6",
-        "copyfiles": "^2.1.1",
-        "css-loader": "^3.0.0",
-        "eslint": "^6.0.1",
-        "eslint-config-prettier": "^6.0.0",
-        "eslint-plugin-import": "^2.18.0",
-        "eslint-plugin-react": "^7.14.2",
-        "npm": "^6.1.0",
-        "prettier": "^2.2.1",
-        "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-docgen": "^4.1.1",
-        "react-dom": "^16.8.6",
-        "style-loader": "^0.23.1",
-        "styled-jsx": "^3.2.1",
-        "webpack": "^4.36.1",
-        "webpack-cli": "3.3.6",
-        "webpack-serve": "3.1.0"
+        "babel-loader": "^9.1.2",
+        "css-loader": "^6.7.3",
+        "es-check": "^7.1.0",
+        "eslint": "^8.34.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-react": "^7.32.2",
+        "npm-run-all": "^4.1.5",
+        "prettier": "^2.8.4",
+        "prop-types": "^15.8.1",
+        "react": "^16.14.0",
+        "react-docgen": "^5.4.3",
+        "react-dom": "^16.14.0",
+        "style-loader": "^3.3.1",
+        "styled-jsx": "^5.1.2",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1"
     },
     "files": [
         "/dash_ag_grid/*{.js,.map}"
@@ -74,5 +78,8 @@
     "engines": {
         "node": ">=8.11.0",
         "npm": ">=6.1.0"
-    }
+    },
+    "browserslist": [
+      "last 7 years and not dead"
+    ]
 }
