--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dash_ag_grid",
-    "version": "2.0.0",
+    "version": "2.0.0a2",
     "description": "Dash wrapper around ag-grid",
     "repository": {
         "type": "git",
