clean up manifest and release instructions

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,6 @@
-include dash_ag_grid/dash_ag_grid.min.js
-include dash_ag_grid/dash_ag_grid.min.js.map
-include dash_ag_grid/async-dashaggrid.js
-include dash_ag_grid/async-dashaggrid.js.map
+include dash_ag_grid/*.js
+include dash_ag_grid/*.js.map
+include dash_ag_grid/*.LICENSE.txt
 include dash_ag_grid/metadata.json
 include dash_ag_grid/package-info.json
 include README.md
