lint - and add eslint to CI
leaving prettier off CI for now, that'll cause lots of changes and conflict with other open work!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,9 +23,12 @@ jobs:
       - run:
           name: Build package
           command: |
-            . venv/bin/activate
             npm ci
             npm run build
+      - run:
+          name: Lint
+          command: |
+            npm run private::lint.eslint
       - run:
           name: Run tests
           command: |
