oops put venv back in build command forgot that this runs dash-generate-components which is Python!

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - run:
           name: Build package
           command: |
+            . venv/bin/activate
             npm ci
             npm run build
       - run:
