--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
       - run:
           name: Lint
           command: |
-            npm run private::lint.eslint
+            npm run lint
       - run:
           name: Run tests
           command: |
