--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "author": "Plotly <chris@plot.ly>",
     "license": "MIT",
     "dependencies": {
-        "@material-ui/core": "^4.11.4",
-        "@material-ui/icons": "^4.11.3",
+        "@mui/material": "^5.12.1",
+        "@mui/icons-material": "^5.11.16",
+        "@emotion/styled": "^11.10.6",
+        "@emotion/react": "^11.10.6",
         "ag-grid-community": "^29.3.2",
         "ag-grid-enterprise": "^29.3.2",
         "ag-grid-react": "^29.3.2",
@@ -61,9 +63,9 @@
         "npm-run-all": "^4.1.5",
         "prettier": "^2.8.8",
         "prop-types": "^15.8.1",
-        "react": "^16.14.0",
+        "react": "^18.2.0",
         "react-docgen": "^5.4.3",
-        "react-dom": "^16.14.0",
+        "react-dom": "^18.2.0",
         "style-loader": "^3.3.2",
         "styled-jsx": "^5.1.2",
         "webpack": "^5.80.0",
