fix build pipeline for NPM publishing, and support serve_locally=False

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ NAMESPACE
 Project.toml
 src/*.jl
 src/jl/*.jl
+lib/
 
 # Created by .ignore support plugin (hsz.mobi)
 ### VisualStudioCode template
