Added "Select Everything or Just Filtered" examples updated requirements.txt to run all examples in the docs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -4,3 +4,7 @@ pandas>=1.2.3
 pyyaml>=6.0
 dash-bootstrap-components>=1.0.0
 yfinance
+dash-mantine-components
+dash-iconify
+cstatsmodelsolorlover
+
