--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,4 +1,4 @@
-dash>=2.0.0
+dash>=2.9.0
 gunicorn>=19.9.0
 pandas>=1.2.3
 pyyaml>=6.0
@@ -6,5 +6,6 @@ dash-bootstrap-components>=1.0.0
 yfinance
 dash-mantine-components
 dash-iconify
-cstatsmodelsolorlover
+colorlover
+statsmodels
 
