--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "author": "Plotly <chris@plot.ly>",
     "license": "MIT",
     "dependencies": {
-        "@mui/material": "^5.12.2",
+        "@emotion/react": "^11.11.0",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.13.3",
         "@mui/icons-material": "^5.11.16",
-        "@emotion/styled": "^11.10.8",
-        "@emotion/react": "^11.10.8",
-        "ag-grid-community": "^29.3.3",
-        "ag-grid-enterprise": "^29.3.3",
-        "ag-grid-react": "^29.3.3",
+        "ag-grid-community": "^29.3.5",
+        "ag-grid-enterprise": "^29.3.5",
+        "ag-grid-react": "^29.3.5",
         "d3-format": "^3.1.0",
         "d3-time": "^3.1.0",
         "d3-time-format": "^4.1.0",
@@ -46,16 +46,16 @@
     },
     "devDependencies": {
         "@babel/cli": "^7.21.5",
-        "@babel/core": "^7.21.5",
-        "@babel/eslint-parser": "^7.21.3",
+        "@babel/core": "^7.22.1",
+        "@babel/eslint-parser": "^7.21.8",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.21.5",
-        "@babel/preset-react": "^7.18.6",
+        "@babel/preset-env": "^7.22.4",
+        "@babel/preset-react": "^7.22.3",
         "@plotly/webpack-dash-dynamic-import": "^1.3.0",
         "babel-loader": "^9.1.2",
-        "css-loader": "^6.7.3",
+        "css-loader": "^6.8.1",
         "es-check": "^7.1.1",
-        "eslint": "^8.39.0",
+        "eslint": "^8.41.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-react": "^7.32.2",
@@ -65,11 +65,11 @@
         "react": "^18.2.0",
         "react-docgen": "^5.4.3",
         "react-dom": "^18.2.0",
-        "style-loader": "^3.3.2",
+        "rimraf": "^5.0.1",
+        "style-loader": "^3.3.3",
         "styled-jsx": "^5.1.2",
-        "webpack": "^5.81.0",
-        "webpack-cli": "^5.0.2",
-        "rimraf": "^3.0.2"
+        "webpack": "^5.85.0",
+        "webpack-cli": "^5.1.1"
     },
     "files": [
         "/dash_ag_grid/*{.js,.map}",
