--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
         "build": "run-s prepublishOnly build:js build:backends",
         "postbuild": "es-check es2015 dash_ag_grid/*.js",
         "private::format.eslint": "eslint --quiet --fix src",
-        "private::format.prettier": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+        "private::format.prettier": "prettier --write src --ignore-path=.prettierignore",
         "format": "run-s private::format.*",
         "private::lint.eslint": "eslint src",
-        "private::lint.prettier": "prettier \"src/**/*.{js,jsx,ts,tsx}\" --list-different",
+        "private::lint.prettier": "prettier src --list-different --ignore-path=.prettierignore",
         "lint": "run-s private::lint.*"
     },
     "author": "Plotly <chris@plot.ly>",
@@ -29,8 +29,8 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.13.5",
-        "@mui/icons-material": "^5.11.16",
+        "@mui/icons-material": "^5.14.1",
+        "@mui/material": "^5.14.2",
         "ag-grid-community": "^29.3.5",
         "ag-grid-enterprise": "^29.3.5",
         "ag-grid-react": "^29.3.5",
@@ -45,22 +45,22 @@
         "static-eval": "^2.1.0"
     },
     "devDependencies": {
-        "@babel/cli": "^7.22.5",
-        "@babel/core": "^7.22.5",
-        "@babel/eslint-parser": "^7.22.5",
+        "@babel/cli": "^7.22.9",
+        "@babel/core": "^7.22.9",
+        "@babel/eslint-parser": "^7.22.9",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/preset-env": "^7.22.5",
+        "@babel/preset-env": "^7.22.9",
         "@babel/preset-react": "^7.22.5",
         "@plotly/webpack-dash-dynamic-import": "^1.3.0",
-        "babel-loader": "^9.1.2",
+        "babel-loader": "^9.1.3",
         "css-loader": "^6.8.1",
         "es-check": "^7.1.1",
-        "eslint": "^8.43.0",
-        "eslint-config-prettier": "^8.8.0",
+        "eslint": "^8.45.0",
+        "eslint-config-prettier": "^8.9.0",
         "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-react": "^7.32.2",
+        "eslint-plugin-react": "^7.33.0",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.8.8",
+        "prettier": "^3.0.0",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-docgen": "^5.4.3",
@@ -68,7 +68,7 @@
         "rimraf": "^5.0.1",
         "style-loader": "^3.3.3",
         "styled-jsx": "^5.1.2",
-        "webpack": "^5.87.0",
+        "webpack": "^5.88.2",
         "webpack-cli": "^5.1.4"
     },
     "files": [
