increasing `no_output_timeout` to `20m` from the default of `10m`

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,6 +27,7 @@ jobs:
             . venv/bin/activate
             npm ci
             npm run build
+          no_output_timeout: 20m
       - run:
           name: Lint
           command: |
