--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
         "babel-loader": "^9.1.3",
         "css-loader": "^6.10.0",
         "es-check": "^7.1.1",
+        "esbuild-loader": "^4.1.0",
         "eslint": "^8.56.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
