--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  browser-tools: circleci/browser-tools@1.4.6
+  browser-tools: circleci/browser-tools@1.4.8
 
 jobs:
   test: &test
@@ -12,8 +12,8 @@ jobs:
           password: $DASH_PAT_DOCKERHUB
     steps:
       - checkout
-      - browser-tools/install-browser-tools:
-          chrome-version: 123.0.6312.105
+      - browser-tools/install-chrome
+      - browser-tools/install-chromedriver
       - run:
           name: Install Python deps
           command: |
