--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,3 +6,7 @@ include dash_ag_grid/package-info.json
 include README.md
 include LICENSE
 include package.json
+
+include requires-dev.txt
+include requires-docs.txt
+include requires-install.txt
