--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -5,15 +5,17 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
-    container:
-      image: cimg/python:3.9.9-node
-      credentials:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
+    strategy:
+      matrix:
+        python-version: [3.8, 3.9, 3.10, 3.11, 3.12]
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v3
+        with:
+          python-version: ${{ matrix.python-version }}
 
       - name: Install Chrome
         uses: browser-actions/setup-chrome@1.0.0
@@ -21,10 +23,12 @@ jobs:
       - name: Install ChromeDriver
         uses: browser-actions/setup-chromedriver@1.0.0
 
-      - name: Install Python dependencies
+      - name: Install dependencies
         run: |
-          python -m venv venv && . venv/bin/activate
-          pip install --upgrade pip wheel
+          python -m venv venv
+          . venv/bin/activate
+          pip install --upgrade pip
+          pip install wheel
           pip install ".[dev]"
 
       - name: Build package
@@ -42,31 +46,30 @@ jobs:
           . venv/bin/activate
           pytest --headless
 
-  test-react-18:
+  test-react:
     runs-on: ubuntu-latest
-    container:
-      image: cimg/python:3.9.9-node
-      credentials:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      env:
-        REACT_VERSION: "18.2.0"
-
+    strategy:
+      matrix:
+        react-version: ["16.8.0", "17.0.0", "18.2.0"]
     steps:
       - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
+        with:
+          python-version: 3.12
       - uses: browser-actions/setup-chrome@1.0.0
       - uses: browser-actions/setup-chromedriver@1.0.0
       - run: |
-          python -m venv venv && . venv/bin/activate
-          pip install --upgrade pip wheel
-          pip install ".[dev]"
-      - run: |
+          python -m venv venv
           . venv/bin/activate
+          pip install --upgrade pip
+          pip install wheel
+          pip install ".[dev]"
+          echo "Using React version ${{ matrix.react-version }}"
           npm ci
+          npm install react@${{ matrix.react-version }} react-dom@${{ matrix.react-version }}
           npm run build
         timeout-minutes: 20
       - run: npm run lint
       - run: |
           . venv/bin/activate
           pytest --headless
-
