--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -78,7 +78,7 @@ jobs:
           uv venv
 
       - name: Install package
-      - run: |
+        run: |
           source .venv/bin/activate
           uv pip install --upgrade pip
           uv pip install wheel
