Going on a limb and guessing that react 18 is special

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -57,7 +57,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        react-version: ["16.8.0", "17.0.0", "18.2.0"]
+        react-version: ["18.2.0"]
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
