--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -1,6 +1,12 @@
-name: CI Pipeline
+name: Run tests
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+    tags:
+      - v*
+  pull_request:
+    branches: [main]
 
 jobs:
   test:
