Bundle npm pack files

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
           source .venv/bin/activate
           npm i
           npm run dist
+          npm pack && mv *.tgz dist/
         shell: bash
       - uses: ncipollo/release-action@v1
         with:
