--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,8 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv
         shell: bash
-      - run: |
+      - name: Generate distribution
+        run: |
           source .venv/bin/activate
           npm i
           npm run dist
