Only validate version numbers on release

--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -99,4 +99,5 @@ jobs:
       - run: npm run lint
       - run: |
           source .venv/bin/activate
-          pytest --headless
+          pytest --headless -k "not test_versioning"
+          
