--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,6 +24,11 @@ jobs:
           curl -LsSf https://astral.sh/uv/install.sh | sh
           uv venv
         shell: bash
+      - name: Run all tests
+        run: |
+          source .venv/bin/activate
+          uv pip install ".[dev]"
+          pytest --headless
       - name: Generate distribution
         run: |
           source .venv/bin/activate
