--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "private::lint.eslint": "eslint src",
         "private::lint.prettier": "prettier src --list-different --ignore-path=.prettierignore",
         "lint": "run-s private::lint.*",
-        "dist": "npm run build && run-s pre-flight-dag-version && rimraf build dist && python setup.py sdist bdist_wheel"
+        "dist": "npm run build && pytest --headless && run-s pre-flight-dag-version && rimraf build dist && python setup.py sdist bdist_wheel"
     },
     "author": "Plotly <chris@plot.ly>",
     "license": "MIT",
