--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,41 +13,11 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v3
+      - name: Reuse Build and Validate Workflow
+        uses: ./.github/workflows/build.yml
         with:
-          node-version: "v18.16.0"
-      - uses: actions/setup-python@v4
-        with:
-          python-version: "3.10"
-      - name: Setup dependencies
-        # Set up the virtual environment and install dev dependencies (JS & Python)
-        run: |
-          curl -LsSf https://astral.sh/uv/install.sh | sh
-          uv venv
-          source .venv/bin/activate
-          uv pip install ".[dev]"
-          npm i
-        shell: bash
-      - name: Build package
-        run: |
-          source .venv/bin/activate
-          npm run build
-        shell: bash
-      - name: Generate distribution
-        # Run setup.py to generate the distribution
-        run: |
-          source .venv/bin/activate
-          npm run dist
-          npm pack && mv *.tgz dist/
-      - name: Validate distribution
-        # Run tests again using the generated wheel file
-        run: |
-          uv venv test-dist
-          source test-dist/bin/activate
-          WHL_FILE=$(ls dist/*.whl)
-          uv pip install "${WHL_FILE}[dev]"
-          npm run test
-        shell: bash
+          python-version: '3.10'
+          node-version: 'v18.16.0'
       - uses: ncipollo/release-action@v1
         with:
           artifacts: "dist/*.whl,dist/*.tar.gz"
