--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,3 +50,8 @@ jobs:
           uv pip install "${WHL_FILE}[dev]"
           npm run test
         shell: bash
+      - name: Upload built distributions
+        uses: actions/upload-artifact@v4
+        with:
+          name: package-distributions
+          path: dist/
