--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -38,6 +38,10 @@ jobs:
         with:
           name: npm-package
           path: npm-dist/
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
       - name: Publish to npm
         run: |
           pushd npm-dist
