--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "dash-ag-grid",
-    "version": "32.3.0rc0",
+    "version": "32.3.0",
     "description": "Dash wrapper around AG Grid, the best interactive data grid for the web.",
     "repository": {
         "type": "git",
