--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -9,7 +9,9 @@ on:
     tags:
       - v*
   pull_request:
-    branches: [main]
+    branches:
+      - main
+      - v*
 
 jobs:
   test:
@@ -104,4 +106,3 @@ jobs:
         run: |
           source .venv/bin/activate
           pytest --headless
-
